fix collapse button

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -449,3 +449,27 @@ body {
      transition: all .8s;
    }
  }
+
+ .product {
+       border: 10px solid transparent;
+       margin-bottom: 25px;
+       width: 300px;
+       height: 300px;
+   }
+
+ .product:hover {
+       border-color: #f1f1f1;
+   }
+
+
+.navbar-toggle {
+  background-color: transparent;
+
+}
+
+.navbar-collapse{
+
+  }
+.navbar-collapse:hover {
+    
+  }
